# CAFA-6-Protein-Function-Prediction-Kaggle

./: .env  .gitignore  LICENSE  README.md  config.yaml  diamond.md  key  key.pub  main.py  pyproject.toml  requirements.txt  test.py  test_load_config_temp.py
data/: kaggle.ipynb
logs/: processed_data_preview.txt  term_statistics.txt
models/: labels_map.pkl
models_ver3/: threshold_fold_0.json  threshold_fold_1.json  threshold_fold_2.json  threshold_fold_3.json  threshold_fold_4.json
report/: report1.tex  report2.tex
src/: Kaggle.ipynb  Test.py  data.txt  evaluation.ipynb  model_training.ipynb  process_data.ipynb  process_data.py  train.ipynb  train.py  view_data.ipynb  viewer.ipynb
src/align_embed/: protein_go_aligner.py
src/encode/: encode_prot.py  graph_embedding.py  label_embedding.py
src/hoanglmv_ver2/: data_processing.py  predict_align.py  train_align.py
src/map_taxonomy/: embedding_example.py  mapping_example.py  taxonomy_group.py
src/tungvmh/: EDA.ipynb  EDA_GOGraph.ipynb  EDA_GOTerms.ipynb  EDA_ontology.ipynb  EDA_ontology_IA.ipynb  EDA_taxonomy.ipynb  check_vocab.py  data_processing.py  data_processing_v2.py  extract_embeddings_temp.py  inspect_processed2.ipynb  label_processing.py  loss_function.py  predict_align.py  preprocessing.py  train_align.py  verify_label_embedding.ipynb  verify_multiplicity.py
src/tungvmh_ver2/: data_processing.py  data_processing_v2.py  label_processing.py  predict_align.py  train_align.py
src/utils/: load_config.py  mapping.py
src/ver1/: process_data.ipynb  process_data.py  test.py  train.ipynb  train.py
(+20 files in other folders)
